--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -14,6 +14,13 @@ body {
 			box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
+.box-header {
+    text-align: center;
+    margin: 0px;
+    padding: 3px;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.2);
+}
+
 .canvas-box {
 	padding: 0;
 	margin: 0;
