Fix in params box header

--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -12,6 +12,7 @@ body {
 	border-radius: 4px;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 			box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	display: inline-block;
 }
 
 .box-header {
@@ -73,7 +74,7 @@ body {
 }
 
 .params-box {
-	height: 200px;
+	height: 190px;
 	width: 805px;
 	margin-top: 5px;
 	margin-bottom: 10px;
