--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -27,7 +27,6 @@ body {
 	margin: 0;
 	overflow: hidden;
 	position: relative;
-	display: inline-block;
 }
 
 .node {
@@ -60,8 +59,7 @@ body {
 }
 
 .palette {
-	margin-left: 5px;
-	display: inline-block;
+	margin-left: 10px;
 	height: 507px;
 	vertical-align: top;
 	overflow-y: auto;
@@ -74,18 +72,18 @@ body {
 }
 
 .params-box {
-	height: 190px;
+	height: 210px;
 	width: 805px;
 	margin-top: 5px;
 	margin-bottom: 10px;
-	overflow: auto;
+	overflow-x: auto;
 }
 
 input[type=range][orient=vertical] {
 	writing-mode: bt-lr; /* IE */
 	-webkit-appearance: slider-vertical; /* WebKit */
 	width: 50px;
-	height: 150px;
+	height: 125px;
 	padding: 0 5px;
 	display: inline-block;
 }
@@ -94,16 +92,22 @@ input[type=range][orient=vertical] {
 	display: inline-block;
 	text-align: center;
 	width: 100px;
-	margin-top: 15px;
+	margin-top: 7px;
 	font-size: 90%;
 	line-height: 1.4em;
+}
+
+.slider-box input[type=number] {
+	width: 60px;
+	text-align: center;
+	margin-bottom: 5px;
 }
 
 .choice-box {
 	display: inline-block;
 	text-align: center;
 	width: 100px;
-	margin-top: 15px;
+	margin-top: 10px;
 	font-size: 90%;
 	line-height: 1.4em;
 }
