--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -1,6 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Electrolize);
+
 body {
 	margin: 10px;
+	font-family: Electrolize, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+/*----- General -----*/
 
 .graph {
 	padding: 0; margin: 0;
@@ -20,6 +25,8 @@ body {
     margin: 0px;
     padding: 3px;
     text-shadow: 0 -1px 0 rgba(0,0,0,.2);
+	font-weight: bold;
+	font-size: 110%;
 }
 
 .canvas-box {
@@ -28,6 +35,9 @@ body {
 	overflow: hidden;
 	position: relative;
 }
+
+
+/*----- Node styles -----*/
 
 .node {
 	color: white;
@@ -57,6 +67,8 @@ body {
 	color: royalblue;
 }
 
+/*----- Palette box -----*/
+
 .palette {
 	margin-left: 10px;
 	height: 507px;
@@ -70,22 +82,14 @@ body {
 	cursor: copy;
 }
 
+/*----- Params box -----*/
+
 .params-box {
 	height: 210px;
 	width: 595px;
 	margin-top: 5px;
 	margin-bottom: 10px;
 	overflow-x: auto;
-	display: inline-block;
-}
-
-.presets-box {
-	height: 210px;
-	width: 200px;
-	margin-top: 5px;
-	margin-bottom: 10px;
-	margin-left: 10px;
-	vertical-align: top;
 	display: inline-block;
 }
 
@@ -133,7 +137,32 @@ input[type=range][orient=vertical] {
 }
 
 
-/*----- Dark theme -----*/
+/*----- Preset box -----*/
+
+.presets-box {
+	height: 210px;
+	width: 200px;
+	margin-top: 5px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	vertical-align: top;
+	display: inline-block;
+}
+
+#preset-num {
+	display: inline-block;
+	width: 50px;
+	font-size: 130%;
+	text-align: center
+}
+
+#preset-name {
+	width: 100%;
+	text-align: center;
+}
+
+
+/*-------------------- Dark theme --------------------*/
 
 body.theme-dark {
 	background-color: #999;
