--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -48,28 +48,41 @@ body {
 	color: white;
 	text-shadow: 0 -1px 0 rgba(0,0,0,.2);
 	position: absolute;
-	background: green;
+	background-color: green;
 	border-radius: 4px;
 	width: 80px; height: 60px;
 	text-align: center;
 	line-height: 60px;
 }
 
-.node-ctrl {
+.node-src {
+	background-color: #36B75D;
+}
+
+.node-effect {
 	background-color: royalblue;
 }
+
+.node-out {
+	background-color: #41A6E1;
+}
+
+.node-ctrl {
+	background-color: #C841E1;
+}
+
 .node.selected {
 	box-shadow: 5px 5px 2px rgba(0,0,0,0.5);
 }
 
 .arrow {
 	display: none;
-	color: green;
+	color: royalblue;
 }
 
 .arrow-ctrl {
 	display: none;
-	color: royalblue;
+	color: #C841E1;
 }
 
 /*----- Palette box -----*/
@@ -78,24 +91,32 @@ body {
 	margin-left: 10px;
 	height: 507px;
 	vertical-align: top;
-	overflow-y: auto;
+	width: 92px;
+	overflow: hidden;
 }
 
-.palette > .node {
+.palette .node {
 	position: static;
 	margin: 5px 5px 0px 5px;
 	cursor: copy;
+}
+
+.palette-section {
+	margin: 3px 4px -4px 4px;
+	text-align: center;
+	font-size: 90%;
 }
 
 /*----- Params box -----*/
 
 .params-box {
 	height: 210px;
-	width: 595px;
+	width: 605px;
 	margin-top: 5px;
 	margin-bottom: 10px;
 	overflow-x: auto;
 	display: inline-block;
+	position: static;
 }
 
 input[type=range][orient=vertical] {
@@ -146,7 +167,7 @@ input[type=range][orient=vertical] {
 
 .presets-box {
 	height: 210px;
-	width: 200px;
+	width: 190px;
 	margin-top: 5px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -156,7 +177,7 @@ input[type=range][orient=vertical] {
 
 #preset-num {
 	display: inline-block;
-	width: 50px;
+	width: 40px;
 	font-size: 130%;
 	text-align: center
 }
