THX awesome sound

--- a/synth/prz/css/reveal.css
+++ b/synth/prz/css/reveal.css
@@ -348,6 +348,10 @@ html:-moz-full-screen-ancestor {
   -webkit-transition-duration: 1200ms;
           transition-duration: 1200ms; }
 
+.reveal .slides section[data-transition-speed="lethargic"] {
+  -webkit-transition-duration: 6000ms;
+          transition-duration: 6000ms; }
+
 .reveal .slides > section.stack {
   padding-top: 0;
   padding-bottom: 0; }
