--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -210,6 +210,19 @@ input[type=range][orient=vertical] {
 	text-align: center;
 }
 
+.upload {
+  position: relative;
+}
+
+.upload input {
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 /*----- Piano box -----*/
 
