--- a/synth/css/main.css
+++ b/synth/css/main.css
@@ -283,3 +283,17 @@ input[type=range][orient=vertical] {
 	text-align: center;
 	vertical-align: middle;
 }
+
+.portamento-box {
+	display: inline-block;
+	position: absolute;
+	left: 120px;
+/*	left: 130px;*/
+}
+
+.arpeggio-box {
+	display: inline-block;
+	position: absolute;
+	left: 275px;
+/*	left: 310px;*/
+}
