--- a/nnn/style.css
+++ b/nnn/style.css
@@ -25,6 +25,12 @@
 	margin: 0 auto;
 }
 
-#butlearn {
+.btn-primary {
 	width: 7em;
+}
+
+#nn-diagram {
+	border: 1px solid #CCC;
+	border-radius: 4px;
+	margin-left: 2em;
 }
