Formula editor is resizable

--- a/nnn/style.css
+++ b/nnn/style.css
@@ -38,3 +38,10 @@
 	border-radius: 4px;
 	margin-left: 2em;
 }
+
+#js-editor {
+	width: 100%;
+	height: 20ex;
+	resize: vertical;
+	overflow: hidden;
+}
